# serializer version: 1
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_average_demand:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_average_demand:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_average_demand',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Active average demand',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_power_average_w',
    'unique_id': 'aabbccddeeff_active_power_average_w',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_average_demand:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Device Active average demand',
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_average_demand',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '123.0',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_current_phase_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
    'original_icon': None,
    'original_name': 'Active current phase 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_current_l1_a',
    'unique_id': 'aabbccddeeff_active_current_l1_a',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'Device Active current phase 1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_current_phase_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '-4',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_current_phase_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
    'original_icon': None,
    'original_name': 'Active current phase 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_current_l2_a',
    'unique_id': 'aabbccddeeff_active_current_l2_a',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'Device Active current phase 2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_current_phase_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_current_phase_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
    'original_icon': None,
    'original_name': 'Active current phase 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_current_l3_a',
    'unique_id': 'aabbccddeeff_active_current_l3_a',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_current_phase_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'Device Active current phase 3',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_current_phase_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_frequency:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_frequency:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_frequency',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
    'original_icon': None,
    'original_name': 'Active frequency',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_frequency_hz',
    'unique_id': 'aabbccddeeff_active_frequency_hz',
    'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_frequency:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'frequency',
      'friendly_name': 'Device Active frequency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_frequency',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Active power',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_power_w',
    'unique_id': 'aabbccddeeff_active_power_w',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Device Active power',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_power',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '-123',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_power_phase_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Active power phase 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_power_l1_w',
    'unique_id': 'aabbccddeeff_active_power_l1_w',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Device Active power phase 1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_power_phase_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '-123',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_power_phase_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Active power phase 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_power_l2_w',
    'unique_id': 'aabbccddeeff_active_power_l2_w',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Device Active power phase 2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_power_phase_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '456',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_power_phase_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Active power phase 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_power_l3_w',
    'unique_id': 'aabbccddeeff_active_power_l3_w',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_power_phase_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Device Active power phase 3',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_power_phase_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '123.456',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_tariff:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_tariff:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '1',
        '2',
        '3',
        '4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_tariff',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:calendar-clock',
    'original_name': 'Active tariff',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_tariff',
    'unique_id': 'aabbccddeeff_active_tariff',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_tariff:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Device Active tariff',
      'icon': 'mdi:calendar-clock',
      'options': list([
        '1',
        '2',
        '3',
        '4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_tariff',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_voltage_phase_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Active voltage phase 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_voltage_l1_v',
    'unique_id': 'aabbccddeeff_active_voltage_l1_v',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Device Active voltage phase 1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_voltage_phase_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '230.111',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_voltage_phase_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Active voltage phase 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_voltage_l2_v',
    'unique_id': 'aabbccddeeff_active_voltage_l2_v',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Device Active voltage phase 2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_voltage_phase_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '230.222',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_voltage_phase_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Active voltage phase 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_voltage_l3_v',
    'unique_id': 'aabbccddeeff_active_voltage_l3_v',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_voltage_phase_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'Device Active voltage phase 3',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_voltage_phase_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '230.333',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_water_usage:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_water_usage:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_active_water_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Active water usage',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_liter_lpm',
    'unique_id': 'aabbccddeeff_active_liter_lpm',
    'unit_of_measurement': 'l/min',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_active_water_usage:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Active water usage',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'l/min',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_active_water_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '12.345',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_dsmr_version:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_dsmr_version:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_dsmr_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:counter',
    'original_name': 'DSMR version',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dsmr_version',
    'unique_id': 'aabbccddeeff_smr_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_dsmr_version:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device DSMR version',
      'icon': 'mdi:counter',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_dsmr_version',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_gas_meter_identifier:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_gas_meter_identifier:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_gas_meter_identifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alphabetical-variant',
    'original_name': 'Gas meter identifier',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'gas_unique_id',
    'unique_id': 'aabbccddeeff_gas_unique_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_gas_meter_identifier:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Gas meter identifier',
      'icon': 'mdi:alphabetical-variant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_gas_meter_identifier',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '01FFEEDDCCBBAA99887766554433221100',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_long_power_failures_detected:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_long_power_failures_detected:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_long_power_failures_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:transmission-tower-off',
    'original_name': 'Long power failures detected',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'long_power_fail_count',
    'unique_id': 'aabbccddeeff_long_power_fail_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_long_power_failures_detected:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Long power failures detected',
      'icon': 'mdi:transmission-tower-off',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_long_power_failures_detected',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_peak_demand_current_month:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_peak_demand_current_month:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_peak_demand_current_month',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Peak demand current month',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'monthly_power_peak_w',
    'unique_id': 'aabbccddeeff_monthly_power_peak_w',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_peak_demand_current_month:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Device Peak demand current month',
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_peak_demand_current_month',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1111.0',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_power_failures_detected:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_power_failures_detected:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_power_failures_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:transmission-tower-off',
    'original_name': 'Power failures detected',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'any_power_fail_count',
    'unique_id': 'aabbccddeeff_any_power_fail_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_power_failures_detected:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Power failures detected',
      'icon': 'mdi:transmission-tower-off',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_power_failures_detected',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_smart_meter_identifier:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_smart_meter_identifier:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_smart_meter_identifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alphabetical-variant',
    'original_name': 'Smart meter identifier',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'unique_meter_id',
    'unique_id': 'aabbccddeeff_unique_meter_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_smart_meter_identifier:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Smart meter identifier',
      'icon': 'mdi:alphabetical-variant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_smart_meter_identifier',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '00112233445566778899AABBCCDDEEFF',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_smart_meter_model:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_smart_meter_model:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_smart_meter_model',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'Smart meter model',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'meter_model',
    'unique_id': 'aabbccddeeff_meter_model',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_smart_meter_model:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Smart meter model',
      'icon': 'mdi:gauge',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_smart_meter_model',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'ISKRA  2M550T-101',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_export',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy export',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_export_kwh',
    'unique_id': 'aabbccddeeff_total_power_export_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy export',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_export',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '13086.777',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_export_tariff_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy export tariff 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_export_t1_kwh',
    'unique_id': 'aabbccddeeff_total_power_export_t1_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy export tariff 1',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_export_tariff_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '4321.333',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_export_tariff_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy export tariff 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_export_t2_kwh',
    'unique_id': 'aabbccddeeff_total_power_export_t2_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy export tariff 2',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_export_tariff_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '8765.444',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_export_tariff_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy export tariff 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_export_t3_kwh',
    'unique_id': 'aabbccddeeff_total_power_export_t3_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy export tariff 3',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_export_tariff_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '8765.444',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_4:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_4:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_export_tariff_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy export tariff 4',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_export_t4_kwh',
    'unique_id': 'aabbccddeeff_total_power_export_t4_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_export_tariff_4:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy export tariff 4',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_export_tariff_4',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '8765.444',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_import',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy import',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_import_kwh',
    'unique_id': 'aabbccddeeff_total_power_import_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy import',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_import',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '13779.338',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_import_tariff_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy import tariff 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_import_t1_kwh',
    'unique_id': 'aabbccddeeff_total_power_import_t1_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy import tariff 1',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_import_tariff_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '10830.511',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_import_tariff_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy import tariff 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_import_t2_kwh',
    'unique_id': 'aabbccddeeff_total_power_import_t2_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy import tariff 2',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_import_tariff_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2948.827',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_import_tariff_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy import tariff 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_import_t3_kwh',
    'unique_id': 'aabbccddeeff_total_power_import_t3_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy import tariff 3',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_import_tariff_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2948.827',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_4:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_4:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_energy_import_tariff_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy import tariff 4',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_energy_import_t4_kwh',
    'unique_id': 'aabbccddeeff_total_power_import_t4_kwh',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_energy_import_tariff_4:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Device Total energy import tariff 4',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_energy_import_tariff_4',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2948.827',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_gas:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_gas:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_gas',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.GAS: 'gas'>,
    'original_icon': None,
    'original_name': 'Total gas',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_gas_m3',
    'unique_id': 'aabbccddeeff_total_gas_m3',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_gas:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'gas',
      'friendly_name': 'Device Total gas',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_gas',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1122.333',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_water_usage:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_water_usage:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.device_total_water_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': 'mdi:gauge',
    'original_name': 'Total water usage',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_liter_m3',
    'unique_id': 'aabbccddeeff_total_liter_m3',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_total_water_usage:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Device Total water usage',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_total_water_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1234.567',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_voltage_sags_detected_phase_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'Voltage sags detected phase 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_sag_l1_count',
    'unique_id': 'aabbccddeeff_voltage_sag_l1_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Voltage sags detected phase 1',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_voltage_sags_detected_phase_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_voltage_sags_detected_phase_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'Voltage sags detected phase 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_sag_l2_count',
    'unique_id': 'aabbccddeeff_voltage_sag_l2_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Voltage sags detected phase 2',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_voltage_sags_detected_phase_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_voltage_sags_detected_phase_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'Voltage sags detected phase 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_sag_l3_count',
    'unique_id': 'aabbccddeeff_voltage_sag_l3_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_sags_detected_phase_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Voltage sags detected phase 3',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_voltage_sags_detected_phase_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_1:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_1:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_voltage_swells_detected_phase_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'Voltage swells detected phase 1',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_swell_l1_count',
    'unique_id': 'aabbccddeeff_voltage_swell_l1_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_1:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Voltage swells detected phase 1',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_voltage_swells_detected_phase_1',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_2:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_2:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_voltage_swells_detected_phase_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'Voltage swells detected phase 2',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_swell_l2_count',
    'unique_id': 'aabbccddeeff_voltage_swell_l2_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_2:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Voltage swells detected phase 2',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_voltage_swells_detected_phase_2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_3:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_3:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_voltage_swells_detected_phase_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'Voltage swells detected phase 3',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_swell_l3_count',
    'unique_id': 'aabbccddeeff_voltage_swell_l3_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_voltage_swells_detected_phase_3:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Voltage swells detected phase 3',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_voltage_swells_detected_phase_3',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_wi_fi_ssid:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_wi_fi_ssid:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_wi_fi_ssid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Wi-Fi SSID',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_ssid',
    'unique_id': 'aabbccddeeff_wifi_ssid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_wi_fi_ssid:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Wi-Fi SSID',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_wi_fi_ssid',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'My Wi-Fi',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_wi_fi_strength:device-registry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        '3c:39:e7:aa:bb:cc',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'homewizard',
        '3c39e7aabbcc',
      ),
    }),
    'is_new': False,
    'manufacturer': 'HomeWizard',
    'model': 'HWE-P1',
    'name': 'Device',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '4.19',
    'via_device_id': None,
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_wi_fi_strength:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.device_wi_fi_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Wi-Fi strength',
    'platform': 'homewizard',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_strength',
    'unique_id': 'aabbccddeeff_wifi_strength',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors_p1_meter[HWE-P1-entity_ids0][sensor.device_wi_fi_strength:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device Wi-Fi strength',
      'icon': 'mdi:wifi',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.device_wi_fi_strength',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
